# phosphor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  debug_shells.sh  plan.md  test_cli.sh  test_shell_fixes.sh
.github/workflows/: ci.yml
crates/phosphor-cli/: Cargo.toml
crates/phosphor-cli/src/: main.rs
crates/phosphor-common/: Cargo.toml
crates/phosphor-common/src/: error.rs  lib.rs  traits.rs  types.rs
crates/phosphor-core/: Cargo.toml
crates/phosphor-core/src/: ansi.rs  lib.rs
crates/phosphor-core/src/events/: bus.rs  mod.rs  types.rs
crates/phosphor-core/src/pty/: mod.rs  unix.rs  windows.rs
crates/phosphor-core/src/session/: mod.rs
crates/phosphor-core/src/terminal/: buffer.rs  cursor.rs  mod.rs  state.rs
crates/phosphor-core/tests/: test_no_busy_loop.rs  test_nonblocking_fix.rs
crates/phosphor-parser/: Cargo.toml
crates/phosphor-parser/src/: lib.rs
docs/: phase1-implementation.md
features/: debug-pty-closure.md  debug-shell-output-closure.md  fix-pty-async-architecture.md  fix-pty-blocking-reads.md  fix-pty-configuration.md  fix-shell-interactivity.md  fix-shell-output-closure.md  phase1-foundation.md  phase2-ansi-support.md
tests/: integration_test.rs
