[workspace]
members = [
    "crates/phosphor-core",
    "crates/phosphor-parser", 
    "crates/phosphor-common",
    "crates/phosphor-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phosphor Terminal Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/phosphor"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# PTY handling
portable-pty = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Utilities
tokio-util = { version = "0.7", features = ["compat"] }

# Testing
proptest = "1.4"
tempfile = "3.8"