[package]
name = "phosphor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "phosphor-cli"
path = "src/main.rs"

[dependencies]
phosphor-core = { path = "../phosphor-core" }
phosphor-common = { path = "../phosphor-common" }

# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"