[package]
name = "phosphor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
phosphor-common = { path = "../phosphor-common" }

# Workspace dependencies
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
portable-pty = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Additional dependencies
futures = "0.3"
bytes = "1.5"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"